Actualizadas las traducciones.

--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -286,7 +286,7 @@
     "compatible": "Compatibile",
     "completed": "completato",
     "component": "Component",
-    "concept": "Concept",
+    "concept": "Concetto",
     "conditions": "Condizioni",
     "configure-columns": "Column Configurator",
     "confirm": "Confermare",
@@ -646,7 +646,7 @@
     "foresee": "Prevedere",
     "format": "formato",
     "formula-cost-price": "prezzo di costo + x% + y",
-    "formula-sale-price": "formula-sale-price",
+    "formula-sale-price": "formula-prezzo-vendita",
     "formula-to-apply": "Formula da applicare",
     "fourth-quarter": "4º trimestre",
     "fourth-trimester": "Quarto trimestre",
@@ -746,7 +746,7 @@
     "images-added-correctly": "%count% immagini aggiunte correttamente",
     "impacted-tax-re-subaccount": "Sottoconto imposta dovuta",
     "impacted-tax-subaccount": "Subconto imposta impattata",
-    "import": "import",
+    "import": "Importa",
     "import-accounting-plan": "Importa piano contabile",
     "import-accounting-plan-p": "import-accounting-plan-p",
     "import-file": "Importare file",
@@ -854,7 +854,7 @@
     "last-ip": "Ultimo IP",
     "last-month": "mese scorso",
     "last-price-estimation": "Ultima stima del prezzo",
-    "last-price-sale": "Último precio de venta",
+    "last-price-sale": "Ultimo prezzo di vendita",
     "last-purchase-price": "ultimo prezzo d'acquisto",
     "last-quarter": "ultimo-quartiere",
     "last-semester": "Ultimo semestre",
@@ -862,7 +862,7 @@
     "last-update": "last-update",
     "last-user": "Ultimo utente",
     "last-week": "La settimana scorsa",
-    "last-year": "last-year",
+    "last-year": "L'anno scorso",
     "latitude": "Latitudine",
     "latitude-abb": "Lat",
     "ledger": "Ledger",
@@ -898,7 +898,7 @@
     "login-ok": "Accedi con successo (cookie). Utente: '0'",
     "login-password-fail": "Accesso fallito",
     "login-text": "Accesso",
-    "login-to-continue": "login-to-continue",
+    "login-to-continue": "Effettua il login per continuare",
     "login-to-continue-p": "Devi identificarti per continuare con questa azione. Clicca su accedi o crea un account.",
     "login-user-not-found": "Utente non trovato: %nick%",
     "logo": "logo",
@@ -951,7 +951,7 @@
     "meta-description": "FacturaScripts è un software di fatturazione e contabilità per le piccole imprese. Si tratta di software libero sotto licenza GNU \/ LGPL.",
     "method-payment": "Metodo di pagamento",
     "mime-type": "Mime Type",
-    "minimum-amount-with-cifnif": "Mínimo importe con CIF\/NIF",
+    "minimum-amount-with-cifnif": "Importo minimo con CIF\/NIF",
     "minimum-amount-without-cifnif": "Importo minimo senza CIF\/NIF",
     "minimum-stock": "Scorta minima",
     "minutes": "Minuti",
@@ -1029,7 +1029,7 @@
     "normal": "normale",
     "not-allowed-delete": "not-allowed-delete",
     "not-allowed-modify": "Non si è autorizzati a modificare",
-    "not-enough-stock": "not-enough-stock",
+    "not-enough-stock": "Non abbastanza stock di %reference%",
     "not-passed-integrity-check": "Alcuni file non hanno superato il controllo di integrità...<br\/>Puoi <a class='alert-link' target='_blank' href='IntegritySystemCheck'>ottenere ulteriori dettagli qui<\/a>.",
     "not-public": "Non pubblico",
     "not-stored-content": "Contenuto non memorizzato",
@@ -1083,9 +1083,9 @@
     "original-file": "File originale",
     "other-data": "Altri dati",
     "others-filters": "altri filtri",
-    "out-of-stock": "out-of-stock",
+    "out-of-stock": "Fuori stock",
     "page": "pagina",
-    "page-break": "Salto de página",
+    "page-break": "Interruzione di pagina",
     "page-configuration": "Pagina di configurazione",
     "page-not-found": "Pagina non trovata",
     "page-not-found-p": "No hemos encontrado la página que busca.",
@@ -1101,7 +1101,7 @@
     "parent-family-cant-be-child": "La famiglia madre non può essere la stessa del bambino.",
     "parent-group": "gruppo genitore",
     "parent-group-cant-be-the-same-group": "Parent group can't be the same group",
-    "parent-group-loop": "Parent group %parentGroup% causing circular relation.",
+    "parent-group-loop": "Il gruppo genitore %parentGroup% sta causando una relazione circolare.",
     "partnumber": "Numero di parte",
     "passenger": "Passeggero",
     "password": "Contraseña",
@@ -1202,7 +1202,7 @@
     "product-not-found": "Producto %ref% no encontrado",
     "products": "Prodotti",
     "profile": "Perfil",
-    "profit-and-loss": "Profit and Loss",
+    "profit-and-loss": "Profitto e Perdita",
     "profit-and-loss-balance": "Bilancio dei conti economici",
     "profits": "Profitti",
     "project": "progetto",
@@ -1243,7 +1243,7 @@
     "receipts": "ricevute",
     "record-deleted-correctly": "Record cancellato correttamente!",
     "record-deleted-error": "Errore nell'eliminare il record",
-    "record-not-found": "record-not-found",
+    "record-not-found": "Record non trovato",
     "record-save-error": "An error occurred while saving the record",
     "record-updated-correctly": "Registro aggiornato correttamente!",
     "recreate-system-integrity": "Recreate system integrity",
@@ -1287,7 +1287,7 @@
     "repeat-new-password": "Ripetere la password",
     "repeat-password": "Ripeti password",
     "reply": "risposta",
-    "report": "report",
+    "report": "Rapporto",
     "report-grouping-account": "Raggruppa per conto",
     "report-non-grouping-account": "Non raggruppare per conto",
     "report-taxes-p": "Questo rapporto consente di ottenere la scomposizione delle imposte sulle fatture di acquisto o di vendita del range selezionato",
@@ -1296,7 +1296,7 @@
     "required": "richiesto",
     "requires-core": "Richiede FacturaScripts %version%",
     "reserved": "Riservato",
-    "reset": "Ripristina correttamente le impostazioni, premere <a href=\" %1$s#avanzado\">qui<\/a> per continuare.",
+    "reset": "Ripristina",
     "resource": "Resource",
     "respond": "Rispondere",
     "restore": "ripristina",
@@ -1518,7 +1518,7 @@
     "this-last-month": "Questo ultimo mese",
     "this-last-week": "Ultima settimana",
     "this-last-year": "Ultimo anno",
-    "this-month": "this-month",
+    "this-month": "Questo mese",
     "this-week": "questa-settimana",
     "this-year": "Quest'anno",
     "thousands-separator": "migliaia",
@@ -1544,7 +1544,7 @@
     "totalirpf-value-error": "Quantità totale IRPF pari a 0 1 non corretta (2). Importo corretto: 3",
     "totaliva-value-error": "Importo totale della tassa pari a 0 1 non corretto (2). Importo corretto: 3",
     "totallinea-value-error": "Errore nel valore totallinea della riga IVA dell'imposta 0 della fattura. Valore corretto: 1",
-    "totals": "Totales",
+    "totals": "Totali",
     "town": "Cittadina",
     "tracking-code": "codice di tracciamento",
     "transfer": "trasferimento",
@@ -1554,7 +1554,7 @@
     "translations": "Traduzioni",
     "travel": "Viaggio",
     "try-again-later": "try-again-later",
-    "tuesday": "tuesday",
+    "tuesday": "Martedì",
     "type": "tipo",
     "type-alert": "Tipo di avviso",
     "type-critical": "Type critical",
@@ -1651,7 +1651,7 @@
     "without-tax": "Senza tasse",
     "without-taxation": "Senza tasse",
     "wizard": "wizard",
-    "wizard-p": "wizard-p",
+    "wizard-p": "Compila questo modulo sul tuo business per completare la configurazione.",
     "wizard-plugins": "wizard-plugins",
     "work-events": "Eventi di lavoro",
     "working-hours": "Ore lavorative",
