--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -34,13 +34,13 @@
     "accounting-entry-macros-text": "<p>Puede usar palabras clave especiales (macros) para auto completar información en el campo de descripción:<\/p><dl><dt>Nombre del documento<\/dt><dd>Escriba <strong>%document%<\/strong> para agregar el identificador del documento.<\/dd><dt>Fecha actual<\/dt><dd>Escriba <strong>%date%<\/strong> para agregar la fecha actual.<\/dd><dt>Fecha de entrada<\/dt><dd>Escriba <strong>%date-entry%<\/strong> para agregar la fecha del asiento contable.<\/dd><dt>Mes<\/dt><dd>Escriba <strong>%month%<\/strong> para agregar el nombre del mes de la fecha del asiento contable.<\/dd><\/dl>",
     "accounting-entry-macros-title": "Używanie makr w polu opisu",
     "accounting-exercise-not-found": "Ejercicio no encontrado",
-    "accounting-file": "Archivo de cuentas",
+    "accounting-file": "Archiwum rachunkowe",
     "accounting-heading": "Epígrafe",
     "accounting-heading-code": "ID Nagłówka rachunku",
     "accounting-items": "Pozycje księgowe",
     "accounting-lines-error": "Error en las líneas del asiento contable",
     "accounting-plan": "Plan contable",
-    "accounting-possible-duplicated": "El asiento contable posiblemente está duplicado con este otro. Si no es así, para evitar este mensaje, simplemente cambie el concepto.",
+    "accounting-possible-duplicated": "Możliwe, że to zapis księgowy jest zduplikowany z innym. Jeśli nie, aby uniknąć tego komunikatu, po prostu zmień koncepcję.",
     "accounting-reports": "Raporty księgowe",
     "accounting-within-regularization": "Ya hay una regularización de impuestos en este periodo. No se pueden hacer cambios.",
     "accounts": "Cuentas",
@@ -51,7 +51,7 @@
     "actual-cost-price": "Rzeczywista cena zakupu",
     "add": "Añadir",
     "add-all-disabled": "Añadir todo Deshabilitado",
-    "add-all-enabled": "Añadir todo activado",
+    "add-all-enabled": "Dodaj wszystko włączone",
     "add-extra-lines": "Añadir líneas extra",
     "add-file": "Dodaj plik",
     "add-invoices": "Añadir facturas",
@@ -61,7 +61,7 @@
     "addresses": "Direcciones",
     "addresses-and-contacts": "Direcciones y contactos",
     "admin": "Administrador",
-    "administrator": "Administrador",
+    "administrator": "Administrator",
     "adult": "Adulto",
     "advanced": "Avanzado",
     "agent": "Agent",
@@ -158,7 +158,7 @@
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
     "birth-date": "Fecha de nacimiento",
-    "birthday": "Cumpleaños",
+    "birthday": "Urodziny",
     "block-date": "Fecha de bloqueo",
     "blocked": "Zablokowany",
     "blocked-date": "Fecha de bloqueo",
@@ -361,7 +361,7 @@
     "customer-order": "Zamówienie klienta",
     "customer-orders": "Pedidos de clientes",
     "customer-payment-concept": "Pobranie za rachunek %document%",
-    "customer-reached-maximum-risk": "El cliente ha superado su riesgo máximo",
+    "customer-reached-maximum-risk": "Klient osiągnął maksymalne ryzyko",
     "customer-subaccount-p": "Indique una subcuenta a usar o deje el campo en blanco para asignar una automáticamente",
     "customers": "Klienci",
     "customize": "Personalizar",
@@ -418,7 +418,7 @@
     "delete-opening": "Usuń otwarcie",
     "delete-record": "Eliminar registro",
     "Deleted": "Usunięto",
-    "deleted-model": "Eliminado %model% (%key%) %desc%",
+    "deleted-model": "Usunięty %model% (%key%) %desc%",
     "delivery-note": "Albarán",
     "delivery-note-email-subject": "Su albarán %code%",
     "delivery-note-email-text": "Buenos días, le adjunto su albarán %code%",
@@ -458,7 +458,7 @@
     "disable-plugins": "Wyłącz wtyczki",
     "disabled": "Desactivado",
     "disabled-plugins": "Wyłączone wtyczki",
-    "discharge-date": "Fecha de alta: %date%",
+    "discharge-date": "Data rozładowania: %date%",
     "discount": "Descuento",
     "display": "Visualización",
     "display-date": "Data wyświetlania",
@@ -694,10 +694,10 @@
     "global-dto-2": "Dto. global 2",
     "greater-than": "Większy niż",
     "grid-help": "Control + intro para salto de línea. Puedes mover o eliminar las líneas haciendo clic en el número de línea.",
-    "group": "Grupo",
+    "group": "Grupa",
     "group-accounts": "Agrupar cuentas",
     "group-by-day": "Agrupar por día",
-    "group-by-day-unixtime": "Agrupar por día (unixtime)",
+    "group-by-day-unixtime": "Grupuj według dnia (unixtime)",
     "group-by-month": "Grupuj wg miesiąca",
     "group-by-month-unixtime": "Grupuj według miesiąca (unixtime)",
     "group-by-subaccount": "Agrupar por subcuenta",
@@ -780,7 +780,7 @@
     "invalid-iso-code": "Nieprawidłowy kod ISO '%iso-code%'",
     "invalid-number": "Número no válido: %number%",
     "invalid-request": "Petición no válida",
-    "invalid-user-can-permission": "Permiso no válido: %permission%. Los permisos disponibles son access, delete, export, import, update y only-owner-data.",
+    "invalid-user-can-permission": "Nieprawidłowe uprawnienie: %permission%. Dostępne uprawnienia to: dostęp, usuwanie, eksport, import, aktualizacja i tylko-dane-właściciela.",
     "invalid-web": "Nieprawidłowy adres sieciowy: %web%",
     "invoice": "Factura",
     "invoice-email-subject": "Su factura %code%",
@@ -789,7 +789,7 @@
     "invoice-have-rectifying-cant-delete": "Faktura ma już korektę. Nie można jej usunąć.",
     "invoice-new-assigned-date": "Istnieją już faktury po wybranej dacie (%oldDate%). Nowa data przypisana: %newDate%",
     "invoice-number": "Numer faktury",
-    "invoice-receipts-diff": "Hay una diferencia (%diff%) entre el importe de la factura y la suma de sus recibos.",
+    "invoice-receipts-diff": "Istnieje różnica (%diff%) pomiędzy kwotą faktury a sumą jej paragonów.",
     "invoice-regularized-cant-change-date": "La factura se encuentra dentro de una regularización de %tax%. No se puede modificar la fecha.",
     "invoice-regularized-cant-delete": "La factura se encuentra dentro de una regularización de %tax% No se puede eliminar.",
     "invoice-without-acc-entry": "Factura sin asiento",
@@ -805,7 +805,7 @@
     "is-creditor": "Es acreedor",
     "is-person": "Persona física",
     "iso": "ISO",
-    "issued": "Emitido",
+    "issued": "Wydano",
     "item-limit": "Elementy na stronę",
     "items-added-correctly": "%num% elementos añadidos correctamente",
     "items-removed-correctly": "%num% elementos quitados correctamente",
@@ -829,7 +829,7 @@
     "languages-de_DE": "Alemán",
     "languages-en_EN": "Inglés",
     "languages-es_AR": "Español (Argentina)",
-    "languages-es_CL": "Español (Chile)",
+    "languages-es_CL": "Espanol (Chile)",
     "languages-es_CO": "Español (Colombia)",
     "languages-es_CR": "Español (Costa Rica)",
     "languages-es_DO": "Español (Rep. Dominicana)",
@@ -853,7 +853,7 @@
     "last-block": "Último bloque",
     "last-ip": "Ostatni adres IP",
     "last-month": "W zeszłym miesiącu",
-    "last-price-estimation": "Último precio de presupuesto",
+    "last-price-estimation": "Ostatnia szacunkowa cena",
     "last-price-sale": "Ostatnia cena sprzedaży",
     "last-purchase-price": "Último precio de compra",
     "last-quarter": "El pasado cuatrimestre",
@@ -1042,7 +1042,7 @@
     "notice": "Aviso",
     "notices": "Avisos",
     "notification": "Notificación",
-    "notifications": "Notificaciones",
+    "notifications": "Powiadomienia",
     "november": "Noviembre",
     "number": "Número",
     "number-attachments": "Liczba załączników",
@@ -1106,7 +1106,7 @@
     "passenger": "Pasażer",
     "password": "Hasło",
     "pattern": "Wzór",
-    "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
+    "pattern-without-number": "Wybrany wzór nie zawiera liczby, przez co istnieje duże prawdopodobieństwo generowania zduplikowanych kodów.",
     "pattern-without-serie": "El patrón elegido no incluye serie, por lo que es posible que genere códigos duplicados para cada serie",
     "pattern-without-year": "El patrón elegido no incluye ejercicio o fecha, por lo que es posible que genere códigos duplicados en cada ejercicio",
     "pay": "Pagar",
@@ -1163,7 +1163,7 @@
     "plugin-update": "Actualización del plugin %pluginName% a la versión %version%",
     "plugins": "Plugins",
     "plugins-p": "Los plugins permiten añadir nuevas funciones. Activa los que necesites ahora, o bien hazlo cuando quieras desde el menú administrador.",
-    "points": "Puntos",
+    "points": "Punkty",
     "points-of-interest": "Punkty zainteresowań",
     "port": "Puerto",
     "position": "Cargo",
@@ -1255,7 +1255,7 @@
     "redirect": "Redirección",
     "reference": "Referencja",
     "reference+description": "Referencia + Descripción",
-    "refresh": "Recargar",
+    "refresh": "Odśwież",
     "refresh-page": "Recargar página",
     "refund-amount": "Cantidad devuelta",
     "refund-payment-concept": "Devolución del recibo %document%",
@@ -1317,7 +1317,7 @@
     "sales-invoice": "Factura de venta",
     "sales-rate": "Tasa de ventas",
     "sales-subaccount-not-found": "Subcuenta de ventas no encontrada",
-    "same-group": "Mismo grupo",
+    "same-group": "Ta sama grupa",
     "saturday": "Sábado",
     "save": "Zapisz",
     "save-data": "Guardar datos",
@@ -1413,7 +1413,7 @@
     "standard": "Estándar",
     "start": "Początek",
     "start-date": "Fecha de inicio",
-    "start-hour": "Hora de inicio",
+    "start-hour": "Godzina rozpoczęcia",
     "start-time": "Czas rozpoczęcia",
     "starting-cron": "Iniciando cron de FacturaScripts...",
     "state": "Estado",
@@ -1541,7 +1541,7 @@
     "total-sales": "Całkowita sprzedaż",
     "total-value-error": "Valor total de %docType% %docCode% incorrecto (%docTotal%). Valor correcto: %calcTotal%",
     "total-with-taxes": "Total + impuestos",
-    "totalirpf-value-error": "Valor total IRPF de %docType% %docCode% incorrecto (%docTotalIRPF%). Valor correcto: %calcTotalIRPF%",
+    "totalirpf-value-error": "Nieprawidłowa łączna wartość IRPF %docType% %docCode% (%docTotalIRPF%). Poprawna wartość to: %calcTotalIRPF%",
     "totaliva-value-error": "Valor total iva de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
     "totallinea-value-error": "Error en el valor de totallinea de la línea de IVA del impuesto %taxCode% de la factura. Valor correcto: %totalLine%",
     "totals": "Całkowite",
