--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -98,7 +98,7 @@
     "apc-clear": "APC limpo.",
     "apc-delete-key-item": "Elemento excluído '0' da APC.",
     "apc-get-key-item": "Obter o elemento '%item%' da APC.",
-    "apc-set-key-item": "Elemento configurado '0' para APC.",
+    "apc-set-key-item": "Elemento atribuído '0' para APC.",
     "api": "API",
     "api-disabled": "API desativada",
     "api-key": "API key",
@@ -286,7 +286,7 @@
     "compatible": "Compatible",
     "completed": "Completado",
     "component": "Component",
-    "concept": "Concept",
+    "concept": "Conceito",
     "conditions": "conditions",
     "configure-columns": "Configurador de colunas",
     "confirm": "confirme",
@@ -369,7 +369,7 @@
     "dasboard-backup-li1": "Se excluir ou desinstalar o FacturaScripts, perderá os dados.",
     "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
-    "dashboard": "painel de controle",
+    "dashboard": "Painel de controle",
     "dashboard-backup": "Copia de seguridad",
     "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
     "dashboard-for": "Dashboard da %company%",
@@ -473,7 +473,7 @@
     "document-sequences": "Sequências de documentos",
     "document-states": "Estados do documento",
     "document-type": "Tipo documento",
-    "document-type-valid-length": "Tipo de documento inválido. Deve ter entre 1 e 20 caracteres.",
+    "document-type-valid-length": "Tipo de documento inválido (deve ter entre 1 e 20 caracteres).",
     "document-wildcard-info": "Documento assinalado na cabeceira do registo contábil",
     "document-without-total": "Documento %document% sem totais ou com o total a 0.",
     "documentation": "Documentação",
@@ -506,7 +506,7 @@
     "email-notification": "Notificação por email",
     "email-notification-disabled": "A notificação por email %name% está desativada",
     "email-notification-not-exists": "Notificação de email %name% não encontrada",
-    "email-replies": "Respuesta de emails",
+    "email-replies": "Respostas de e-mails",
     "email-replies-to": "email-replies-to",
     "email-sent": "Email enviado",
     "email-sent-to": "Email enviado para %email%",
@@ -520,7 +520,7 @@
     "empty-contact-data": "El contacto debe tener nombre o email o dirección",
     "empty-ref-or-missing": "Referência vazia ou produto não encontrado",
     "enable": "Habilitar",
-    "enable-api": "Enable API",
+    "enable-api": "Ativar API",
     "enable-updates-beta": "Ativar atualizações beta",
     "enabled": "ativado",
     "enabled-plugins": "Plugins ativados",
@@ -579,7 +579,7 @@
     "exempt": "Isentar",
     "exercise": "Exercício",
     "exercise-date-out-range": "Date not in exercise range.",
-    "exercise-date-range-exists": "exercise-date-range-exists",
+    "exercise-date-range-exists": "Exercício já existe nesse intervalo de datas (%start% - %end%)",
     "exercise-not-found": "Exercício não encontrado.",
     "exercise-without-accounting-plan": "O",
     "exercises": "Exercícios",
@@ -614,7 +614,7 @@
     "file-yet-exists": "O ficheiro já existe: %filePath%",
     "filecache-clear": "Filecache desmarcada.",
     "filecache-delete-key-item": "Elemento '%item%' excluído do Filecache.",
-    "filecache-get-key-item": "Obtém o elemento '0' da Filecache.",
+    "filecache-get-key-item": "Obtido elemento '0' do Filecache.",
     "filecache-set-key-item": "Elemento configurado '0' para Filecache.",
     "files": "arquivos",
     "filter-method": "Método de filtragem",
@@ -701,7 +701,7 @@
     "group-by-month": "group-by-month",
     "group-by-month-unixtime": "group-by-month-unixtime",
     "group-by-subaccount": "Agrupar por subcuenta",
-    "group-by-week": "group-by-week",
+    "group-by-week": "Agrupar por semana",
     "group-by-week-unixtime": "agrupar por semana (unixtime)",
     "group-by-year": "group-by-year",
     "group-by-year-unixtime": "Agrupar por ano - unixtime",
@@ -768,7 +768,7 @@
     "installer-requirements": "Os seguintes requisitos do instalador são necessários no FacturaScripts:",
     "integrity-check": "Integrity check",
     "integrity-check-help": "Esta é uma verificação da integridade do sistema, descrita como",
-    "interest": "Interés",
+    "interest": "Interesse",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
@@ -803,7 +803,7 @@
     "irpf-subaccount-not-found": "irpf-subaccount-not-found",
     "is-admin": "É administrador",
     "is-creditor": "É credor",
-    "is-person": "É um indivíduo (não uma empresa)",
+    "is-person": "É uma pessoa física",
     "iso": "ISO",
     "issued": "Emitido",
     "item-limit": "Itens por página",
@@ -816,7 +816,7 @@
     "journal": "Diário",
     "journal-closing": "Fecho de jornal",
     "journal-opening": "journal-opening",
-    "journals": "Journals",
+    "journals": "Diários",
     "july": "Julho",
     "june": "Junho",
     "justified": "justified",
@@ -868,7 +868,7 @@
     "ledger": "Diário",
     "left": "Left",
     "level": "Level",
-    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-benefit-sales": "Nível para ver benefícios",
     "level-cost-sales": "Nível para visualizar custos",
     "level1": "Level 1",
     "level2": "Nível 2",
@@ -1105,7 +1105,7 @@
     "partnumber": "Número da peça",
     "passenger": "Passageiro",
     "password": "Senha",
-    "pattern": "pattern",
+    "pattern": "Padrão",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
     "pattern-without-serie": "O padrão escolhido não inclui série, o que pode gerar códigos duplicados para cada série",
     "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
@@ -1124,7 +1124,7 @@
     "pct-vat": "VAT rate",
     "pending": "pendente",
     "pending-invoices-button": "Faturas Pendentes:",
-    "pending-orders-button": "pending-orders-button",
+    "pending-orders-button": "pedidos-pendentes-botão",
     "pending-reception": "Pending reception",
     "percentage": "Percentagem",
     "percentage-commission": "% Comissão",
@@ -1189,8 +1189,8 @@
     "print-export-options": "Opções de impressão e exportação",
     "print-list-of-records": "Imprimir lista de registros",
     "print-price": "Imprimir preços",
-    "print-quantity": "Imprimir cantidad",
-    "printed": "Printed",
+    "print-quantity": "Imprimir quantidade",
+    "printed": "Impresso",
     "printing-format": "Formato de impressão",
     "printing-formats": "printing-formats",
     "priority": "Prioridade",
@@ -1280,7 +1280,7 @@
     "renumber": "Renumerar",
     "renumber-accounting": "Renumber Accounting",
     "renumber-accounting-error": "Ocorreu um erro ao renumerar lançamentos contábeis no exercício fiscal %exerciseCode%",
-    "renumber-accounting-ok": "Renumbering of accounting entries completed",
+    "renumber-accounting-ok": "Reordenação de lançamentos contábeis concluída",
     "renumber-accounting-p": "Renumerar as entradas por data, de menor para maior",
     "renumber-invoices-p": "Renumerar as faturas com base na data, de menor para maior",
     "renumber-invoices-success": "As faturas do exercício '%exercise%' foram renumeradas com sucesso",
@@ -1308,7 +1308,7 @@
     "right": "Direita",
     "risky-customer": "Cliente de Risco",
     "rol": "Rol",
-    "role": "Role",
+    "role": "Função",
     "roles": "Funções",
     "rules": "Rules",
     "run": "executar",
@@ -1353,7 +1353,7 @@
     "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Enviou um vídeo",
     "sent-message-by": "Enviado por %nick% em %date%",
-    "sepa-suffix": "sepa-suffix",
+    "sepa-suffix": "Sufixo SEPA",
     "september": "Septiembre",
     "sequences": "Sequências",
     "serial-number": "Número de Série",
@@ -1502,7 +1502,7 @@
     "tax-transport": "Transporte fiscal",
     "taxes": "Impostos",
     "telemetry-data-to-send": "dados de telemetria para enviar",
-    "telephone-prefix": "Prefijo telefónico",
+    "telephone-prefix": "Prefixo telefônico",
     "template": "Modelo",
     "template-error": "Erro de modelo",
     "template-not-found": "Modelo não encontrado",
@@ -1590,7 +1590,7 @@
     "updater": "Updater",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
     "upload-file": "E",
-    "uploaded-at": "Uploaded at",
+    "uploaded-at": "Carregado em",
     "url": "Local na rede Internet",
     "use-gaps": "Usar lacunas",
     "use-holes-invoices-esp": "Se desmarcar o uso de lacunas nas faturas e excluir alguma, permanecerá a lacuna na faturação e você terá problemas com a receita",
@@ -1639,13 +1639,13 @@
     "wednesday": "quarta-feira",
     "weeks": "Semanas",
     "weight": "Peso",
-    "which-logs-store": "Which logs store",
+    "which-logs-store": "Quais logs armazenar",
     "width": "Largura",
     "wildcard": "Curinga",
     "wildcard-general-info": "Será substituído pelo valor correspondente",
     "wildcard-title": "Curingas substituíveis por valor",
     "without-closure": "sem fechamento",
-    "without-domicile": "without-domicile",
+    "without-domicile": "Sem domicílio",
     "without-groups": "Sem grupo",
     "without-regularization": "Sem regularização",
     "without-tax": "Sem impostos",
