--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -286,7 +286,7 @@
     "compatible": "Compatible",
     "completed": "Completado",
     "component": "Component",
-    "concept": "Concept",
+    "concept": "Conceito",
     "conditions": "conditions",
     "configure-columns": "Configurar colunas",
     "confirm": "confirme",
@@ -369,7 +369,7 @@
     "dasboard-backup-li1": "Si borra o desinstala FacturaScripts, pierde los datos.",
     "dasboard-backup-li2": "Se excluir ou desinstalar o XAMPP, perderá os dados.",
     "dasboard-backup-li3": "S",
-    "dashboard": "painel de controle",
+    "dashboard": "Painel de controle",
     "dashboard-backup": "Copia de seguridad",
     "dashboard-backup-p": "Le recordamos que tiene instalado FacturaScripts en su PC, por tanto los datos (las facturas, clientes, etc...) se almacenan en su PC y solamente en su PC. Haga copias de seguridad de forma regular y guarde esas copias lejos del PC.",
     "dashboard-for": "Dashboard da %company%",
@@ -506,7 +506,7 @@
     "email-notification": "Notificação por email",
     "email-notification-disabled": "A notificação por email %name% está desativada",
     "email-notification-not-exists": "Notificação de email %name% não existe",
-    "email-replies": "Respuesta de emails",
+    "email-replies": "Respostas de e-mails",
     "email-replies-to": "email-replies-to",
     "email-sent": "Email enviado",
     "email-sent-to": "Email enviado para %email%",
@@ -609,7 +609,7 @@
     "file-not-exists": "O Ficheiro não existe: %fileName%",
     "file-not-found": "O arquivo 0 não foi encontrado.",
     "file-not-supported": "Arquivo não suportado",
-    "file-size-error": "Error al enviar el archivo %fileName% porque supera el tamaño máximo permitido de %maxSize% MB",
+    "file-size-error": "Erro ao enviar o arquivo %fileName% pois excede o tamanho máximo permitido de %maxSize% MB",
     "file-type-error": "Error al enviar el archivo de tipo%typeFile%. Los tipos admitidos son: audio, document, image y video.",
     "file-yet-exists": "O ficheiro já existe: %filePath%",
     "filecache-clear": "Filecache desmarcada.",
@@ -768,7 +768,7 @@
     "installer-requirements": "As seguintes extensões e funções são necessárias para FacturaScripts:",
     "integrity-check": "Integrity check",
     "integrity-check-help": "This is a check of system integrity, described as",
-    "interest": "Interés",
+    "interest": "Interesse",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "invalid-alphanumeric-code",
@@ -816,7 +816,7 @@
     "journal": "Diário",
     "journal-closing": "Fecho de jornal",
     "journal-opening": "journal-opening",
-    "journals": "Journals",
+    "journals": "Diários",
     "july": "Julho",
     "june": "Junho",
     "justified": "justified",
@@ -868,7 +868,7 @@
     "ledger": "Razão",
     "left": "Left",
     "level": "Level",
-    "level-benefit-sales": "Nivel para ver beneficios",
+    "level-benefit-sales": "Nível para ver benefícios",
     "level-cost-sales": "Nivel para ver costes",
     "level1": "Level 1",
     "level2": "Level 2",
@@ -1105,7 +1105,7 @@
     "partnumber": "Número da peça",
     "passenger": "Pasajero",
     "password": "Senha",
-    "pattern": "pattern",
+    "pattern": "Padrão",
     "pattern-without-number": "El patrón elegido no incluye número, por lo que es muy probable que genere códigos duplicados.",
     "pattern-without-serie": "O padrão escolhido não inclui série, o que pode gerar códigos duplicados para cada série",
     "pattern-without-year": "O padrão escolhido não inclui exercício ou data, pelo que pode gerar códigos duplicados em cada exercício",
@@ -1189,7 +1189,7 @@
     "print-export-options": "Opções de impressão e exportação",
     "print-list-of-records": "Imprimir lista de registros",
     "print-price": "Imprimir preço",
-    "print-quantity": "Imprimir cantidad",
+    "print-quantity": "Imprimir quantidade",
     "printed": "Printed",
     "printing-format": "Formato de impressão",
     "printing-formats": "printing-formats",
@@ -1384,7 +1384,7 @@
     "show-pending-remittances": "Mostrar remessas pendentes",
     "show-price": "Show price on print",
     "show-quantity": "Mostrar quantidade ao imprimir",
-    "show-section-new": "Mostrar sección crear",
+    "show-section-new": "Mostrar seção nova",
     "signature": "Signature",
     "simple": "Simples",
     "simplified": "Simplificada",
@@ -1507,7 +1507,7 @@
     "template-error": "Erro de modelo",
     "template-not-found": "Modelo não encontrado",
     "templates": "Plantillas",
-    "test": "Test",
+    "test": "Teste",
     "test-mail-not-implemented": "O teste do controlador de correio Mail não está implementado",
     "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
     "text-color": "Cor do texto",
@@ -1645,7 +1645,7 @@
     "wildcard-general-info": "Será substituído pelo valor correspondente",
     "wildcard-title": "Curingas substituíveis por valor",
     "without-closure": "without-closure",
-    "without-domicile": "without-domicile",
+    "without-domicile": "Sem domicílio",
     "without-groups": "Sem grupo",
     "without-regularization": "Sem regularização",
     "without-tax": "Sem impostos",
